...
  }, []);

  return (
    <View style={styles.container}>
      <MapView ref={mapRef} showsUserLocation style={styles.mapContainer} />

      <Button mode="contained" onPress={() => signOut()} testID="logout-button">
        Log out
      </Button>

      <ActivityIndicator animating={loading} />
    </View>
  );
...
